finished intro and started working on spinnaker blocks and fault tolerance opportunities on spinnaker. Updated biblio

--- a/fault_tolerance_report.bib
+++ b/fault_tolerance_report.bib
@@ -358,7 +358,7 @@
   publisher = {IEEE}
 }
 
-@MISC{checkpointing,
+@MISC{trivedi2008software,
   author = {Kishor Trivedi},
   title = {{Software fault tolerance}},
   howpublished = {\url{http://srel.ee.duke.edu/sw_ft}},
@@ -401,12 +401,17 @@
 	school={University of Manchester}
 }
 
- @misc{ wiki:discretelogs,
+@misc{ wiki:discretelogs,
  	author = "Wikipedia",
  	title = "Discrete logarithm --- Wikipedia{,} The Free Encyclopedia",
  	year = "2015",
  	url = "https://en.wikipedia.org/w/index.php?title=Discrete_logarithm&oldid=670886795",
  	note = "[Online; accessed 23-July-2015]"
- }
+}
  
- 
+@book{kapur2011software,
+ 	title={Software reliability assessment with OR applications},
+ 	author={Kapur, PK and Pham, Hoang and Gupta, Anshu and Jha, PC},
+ 	year={2011},
+ 	publisher={Springer}
+}
