--- a/fault_tolerance_report.tex
+++ b/fault_tolerance_report.tex
@@ -165,13 +165,13 @@ There are two strategies for software fault tolerance: error processing and faul
 	child{ node [arn_lev1] {\small Fault Treatment} }
 	; 
 	\end{tikzpicture}
-	\caption{Means for software fault tolerance}
+	\caption{Means for software fault tolerance.}
 	\label{fig:faulttoltree}
 \end{figure}
 
 \begin{table}[h]
 	\centering
-	\caption{Strategies used by different fault tolerance methods}
+	\caption{Strategies used by different fault tolerance methods.}
 	\label{tab:faulttolmethods}
 	\begin{tabular}{l c c c c }
 		\toprule
@@ -206,69 +206,68 @@ Checkpointing involves occasionally saving the state of a process in stable stor
 \section{Fault tolerance on SpiNNaker}
 \label{sec:ft_spinnaker}
 
-The three fault-tolerant mechanisms that will be dealt with in this report are:
+With regards to the PRiME project the issue of fault tolerance is being currently investigated on the SpiNNaker platform while always keeping in view the issue of power reduction and optimisation. The three main fault-tolerant mechanisms that are being investigated are:
 \begin{itemize}
-\item Dumped packet re-insertion and network congestion,
-\item Process migration,
+\item Dropped packet re-insertion,
+\item Function/Process migration,
 \item CRC error detection/correction of SDRAM blocks.
 \end{itemize}
+More in-depth information and experimental results will be presented in the following sections. But first, an overview of the SpiNNaker architecture as well the various fault tolerance mechanisms at the disposal of the low-level system programmer available on the SpiNNaker chip will be presented.
 
 \subsection{SpiNNaker architecture}
 
-The SpiNNaker engine is a massively-parallel multi-core computing system. It will contain up to about one million ARM9 cores and 7~TB of RAM distributed throughout the system in 57,000 nodes, each node being a System-in-Package (SiP) containing 18 cores plus a 128~MB off-die SDRAM (Synchronous Dynamic Random Access Memory). Each core has associated with it 64~kB of data tightly-coupled memory (DTCM) and 32~kB of instruction tightly-coupled memory (ITCM). The cores have a variety of ways of communicating with each other and with the memory, the dominant of which is by packets. These are 5- or 9-byte (40- or 72-bit) quanta of information that are transmitted around the system under the aegis of a bespoke concurrent hardware routing system. 
+The SpiNNaker engine is a massively-parallel multi-core computing system. The final machine will contain up to approximately one million ARM9 cores and 7~TB of RAM distributed throughout the system in 57,000 nodes, each node being a System-in-Package (SiP) containing 18 cores plus a 128~MB off-die SDRAM (Synchronous Dynamic Random Access Memory). Each core has associated with it 64~kB of data tightly-coupled memory (DTCM) and 32~kB of instruction tightly-coupled memory (ITCM). The cores have a variety of ways of communicating with each other and with the memory, the dominant of which is by packets. These are 5- or 9-byte (40- or 72-bit) quanta of information that are transmitted around the system with the help of a concurrent hardware routing system. 
 
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=0.25\linewidth]{images/spinnaker_die.jpg}
 	\caption{SDRAM stich-bonded to the underlying SpiNNaker die.}
-	\label{fig:spin5}
+	\label{fig:spinnaker_die}
 \end{figure}
 
-The physical hierarchy of the system has each node containing two silicon dies --- the SpiNNaker chip itself, plus the Mobile DDR (Double Data Rate) SDRAM, which is physically mounted on top of the SpiNNaker die and stitch-bonded to it. The nodes are packaged and mounted in a 48-node hexagonal array on a PCB, the full system requiring 1,200 such boards. In operation, the engine consumes at most 90~kW of electrical power. \textbf{Figure~\ref{fig:spin5}} shows a photograph of the basic building block (a 48-chip SpiNNaker board) for the million-core machine.
+The physical hierarchy of the system has each node containing two silicon dies --- the SpiNNaker chip itself, plus the Mobile DDR (Double Data Rate) SDRAM, which is physically mounted on top of the SpiNNaker die and stitch-bonded to it (see \textbf{Figure~\ref{fig:spinnaker_die}}). The nodes are packaged and mounted in a 48-node hexagonal array on a PCB, the full system requiring 1,200 such boards. In operation, the engine will consume at most 90~kW of electrical power. \textbf{Figure~\ref{fig:spin5}} shows a photograph of the basic building block (a 48-chip SpiNNaker board) for the million-core machine.
 
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=0.45\linewidth]{images/spin5.jpg}
-	\caption{48-chip Spin5 board}
+	\caption{48-chip Spin5 board.}
 	\label{fig:spin5}
 \end{figure}
 
 \subsection{Hardware fault tolerance mechanisms}
-The SpiNNaker chip has been designed with fault tolerance in mind. The SpiNNaker chip is made up of various blocks, most of which have a certain degree of hardware fault tolerance in place. The blocks in questions are: the ARM968, the vector interrupt controller, the counter/timer, the DMA controller, the communications controller, the router, the inter-chip transmit and receiver interfaces, the SDRAM interface, the Ethernet interface, the system RAM and the boot ROM. A schematic representation of all these sub systems is shown in \textbf{Figure~\ref{fig:spin_arch}} and \textbf{Figure~\ref{fig:arm968}}.
+The SpiNNaker chip has been designed with fault tolerance in mind. The SpiNNaker chip is made up of various blocks, most of which have a certain degree of hardware fault tolerance in place. The blocks in being considered are: the ARM968, the Vector Interrupt Controller (VIC), the counter/timer, the DMA controller, the communications controller, the router, the inter-chip transmit and receiver interfaces, the SDRAM interface, the Ethernet interface, the system RAM and the boot ROM. A schematic representation of all these sub systems is shown in \textbf{Figure~\ref{fig:spin_arch}}.
 
 \subsubsection{Block description}
 \begin{itemize}
-	\setlength\itemsep{-2pt}
-	\item The \textbf{ARM968} together with the tightly-coupled instruction and date memories, forms the core processing resource in SpiNNaker.
-	\item Each processor node on an SpiNNaker chip has a \textbf{vectored interrupt controller} (VIC) that is used to enable  and disable  interrupts  from  various  sources,  and  to wake  the processor  from  sleep mode when required. The interrupt controller provides centralised management of IRQ and FIQ sources, and offers an efficient indication of the active sources for IRQ vectoring purposes.
-	\item Each processor node on a SpiNNaker chip has a \textbf{Counter/Timer}.
-	\item Each ARM968 processing subsystem includes a \textbf{DMA controller}. The DMA controller is primarily used for transferring inter-neural connection data from the SDRAM in large blocks in response to an  input  event  arriving  at a  fascicle processor, and  for  returning updated connection data during learning. In addition, the DMA controller can transfer data to/from other targets on the System NoC such as the System RAM and Boot ROM. As a secondary function the DMA controller incorporates a `Bridge' across which its host ARM968 has direct read and write access to System NoC devices, including the SDRAM. The ARM968 can use the Bridge whether or not DMA transfers are active.
-	\item	\textbf{Communications controller} --- Each processor node on SpiNNaker includes a communications controller which is responsible for generating and receiving packets to and from the communications network.
-	\item The \textbf{Router} is responsible for routing all packets that arrive at its input to one or more of its outputs. It  is  responsible  for  routing multicast neural event packets, which  it does  through an associative multicast  router  subsystem,  point-to-point  packets  (for  which  it  uses  a  look-up  table),  nearest-neighbour packets  (using  a  simple  algorithmic process),  fixed-route packet  routing  (defined  in  a register), default routing (when a multicast packet does not match any entry in the multicast router) and emergency routing (when an output link is blocked due to congestion or hardware failure).\\
-	Various error conditions are identified and handled by the Router, for example packet parity errors, time-out, and output link failure.
+	\setlength\itemsep{2pt}
+	\item The \textbf{ARM968} together with the tightly-coupled instruction and data memories, form the core processing resource in SpiNNaker.
+	\item Each processor node on an SpiNNaker chip has a \textbf{Vectored Interrupt Controller} (VIC) that is used to enable  and disable  interrupts  from  various  sources,  and  to wake  the processor  from  sleep mode when required.
+	\item Each processor node has a \textbf{Counter/Timer}.
+	\item Each ARM968 processing subsystem includes a \textbf{DMA controller}. The DMA controller is primarily used for transferring inter-neural connection data from the SDRAM in large blocks in response to an  input  event  arriving  at a  fascicle processor, and  for  returning updated connection data during learning. In addition, the DMA controller can transfer data to/from other targets on the System NoC such as the System RAM and Boot ROM.
+	\item	Each processor node on SpiNNaker includes a \textbf{Communications Controller} which is responsible for generating and receiving packets to and from the communications network.
+	\item The \textbf{Router} is responsible for routing all packets that arrive at its input to one or more of its outputs. It  is  responsible  for  routing multicast neural event packets, which  it does  through an associative multicast  router  subsystem,  point-to-point  packets  (for  which  it  uses  a  look-up  table),  nearest-neighbour packets  (using  a  simple  algorithmic process),  fixed-route packet  routing  (defined  in  a register), default routing (when a multicast packet does not match any entry in the multicast router) and emergency routing (when an output link is blocked due to congestion or hardware failure). Various error conditions are identified and handled by the Router, for example packet parity errors, time-out, and output link failure.
 	\item \textbf{Inter-chip  communication}  is  implemented  by  extending  the Communications NoC  from  chip  to chip.  In  order  to  sustain  throughput,  there  is  a  protocol  conversion  at  each  chip  boundary  from standard CHAIN 3-of-6 return-to-zero to 2-of-7 non-return-to-zero. The interfaces include logic to minimise the risk of a protocol deadlock caused by glitches on the inter-chip wires.
-	\item The \textbf{SDRAM  interface}  connects  the System NoC  to  an off-chip SDRAM device.  It  is  the ARM PL340, described in ARM document DDI 0331D.
-	\item \textbf{Ethernet interface} --- The  SpiNNaker  system  connects  to  a  host  machine  via  Ethernet  links.  Each  SpiNNaker  chip includes  an  Ethernet MII  interface,  although  only  a  few  of  the  chips  are  expected  to  use  this interface. These chips will require an external PHY.\\
-	The interface hardware operates at the frame level. All higher-level protocols will be implemented in software running on the local monitor processor.
-	\item The \textbf{System RAM} is an additional 32~kB block of on-chip RAM used primarily by the monitor processor to enhance its program and data memory resources as it will be running more complex (though less time-critical) algorithms than the fascicle processors.\\
-	As the choice of monitor processor is made at start-up (and may change during run-time for fault-tolerance  purposes)  the  system  RAM  is  made  available  to  whichever  processor  is  monitor processor via  the System NoC. Accesses by  the Monitor Processor  to  the System RAM are non-blocking as far as SDRAM accesses by the fascicle processors are concerned.\\
-	The System RAM may also be used by  the fascicle processors to communicate with  the monitor processor and with each other, should the need arise.
+	\item The \textbf{SDRAM  interface}  connects  the System NoC  to  an off-chip SDRAM device.
+	\item \textbf{Ethernet interface} --- The  SpiNNaker  system  connects  to  a  host  machine  via  Ethernet  links.  Each  SpiNNaker  chip includes  an  Ethernet MII  interface with the interface hardware operating at the frame level. All higher-level protocols are implemented in software running on the local monitor processor.
+	\item The \textbf{System RAM} is an additional 32~kB block of on-chip RAM used primarily by the monitor processor to enhance its program and data memory resources as it will be running more complex (though less time-critical) algorithms than the fascicle processors. As the choice of monitor processor is made at start-up (and may change during run-time for fault-tolerance  purposes)  the  system  RAM  is  made  available  to  whichever  processor  is  monitor processor via  the System NoC. Accesses by  the monitor processor  to  the System RAM are non-blocking as far as SDRAM accesses by the fascicle processors are concerned. The System RAM may also be used by  the fascicle processors to communicate with  the monitor processor and with each other, should the need arise.
 	\item The \textbf{Boot ROM} consists of a 32~kB on-chip ROM to provide minimal support for initial self-test and monitor processor selection. It also provides support for router initialisation for bootstrapping and system boot.
 \end{itemize}
 
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.7\linewidth]{images/spinnaker_architecture.pdf}
-	\caption{SpiNNaker architecture}	
+	\caption{SpiNNaker chip subsystems.}	
 	\label{fig:spin_arch}
 \end{figure}
 
-\subsubsection{Fault tolerance mechanisms}
-Starting by describing the fault tolerance detection mechanisms of the \textbf{ARM968} processor core, self-test routines are run at start-up and during normal operation. A chip-wide watchdog timer catches runaway software. In addition the ARM968 is able to isolate defective instruction and data RAM locations and can be mapped out by software. The system controller can also disable any incorrectly operating ARM968 cores. These detection and fault isolation mechanisms help to reconfigure the system in case a fault is detected. In the case of faulty instruction and data RAM, software can be written to avoid such locations. If on the other hand, the self-test and start-up routines detect a failure, the processor core functionality can be migrated to a neighbouring processor.
+\subsubsection{Possible fault tolerance mechanisms}
+This section outlines the various blocks in the SpiNNaker chip which could potentially be used to implement a robust fault tolerant system. At the time of writing, only the router, the vector interrupt controller and the CRC unit are being effectively used to provide a certain level of fault tolerance.
 
-Currently the \textbf{vector interrupt controller} does not provide a high degree of fault tolerance. In the case of a failed vector location, the vector interrupt controller effectively jumps to a random location. If a software mechanism was devised to detect these kind of faults, a failed vector location could be removed from service (provided there are enough vector locations available). Another solution would be to shut down the entire vector system and the interrupts run by software inspection of the IRQ and FIQ status registers.
+The \textbf{ARM968} processor core has self-test routines that are run at start-up and during normal operation to provide a fault tolerance detection mechanism and a chip-wide watchdog timer catches runaway software. In addition, the ARM968 is able to isolate defective instruction and data RAM locations and can be mapped out by software. The system controller can also disable any incorrectly operating ARM968 cores. These detection and fault isolation mechanisms help to reconfigure the system in case a fault is detected. In the case of faulty instruction and data RAM, software can be written to avoid such locations. If on the other hand, the self-test and start-up routines detect a failure, the processor core functionality can be migrated to a neighbouring processor (see \textbf{Section~\ref{sec:migration}}).
 
-In order to detect faults in \textbf{counter/timer}, the second counter/timer could be configured with a longer period to check the calibration of the first. Assuming that the system only requires one counter/timer, and a fault is detected, the faulty counter could be disabled, with the operational counter/timer taking over.
+Currently the \textbf{vector interrupt controller} does not provide a high degree of fault tolerance. In the case of a failed vector location, the vector interrupt controller effectively jumps to a random location. If a software mechanism was devised to detect these kind of faults, a failed vector location could be removed from service (provided there are enough vector locations available). Another solution would be to shut down the entire vector system and the interrupts run by software inspection of the IRQ status registers.
+
+In order to detect faults in the \textbf{counter/timer}, the second counter/timer could be configured with a longer period to check the calibration of the first. Assuming that the system only requires one counter/timer, and a fault is detected, the faulty counter could be disabled, with the operational counter/timer taking over.
 
 \begin{figure}[t]
 	\centering
@@ -277,54 +276,35 @@ In order to detect faults in \textbf{counter/timer}, the second counter/timer co
 	\label{fig:arm968}
 \end{figure}
 
-The \textbf{DMA controller} has a CRC unit (more on this in \textbf{Section \ref{sec:crc}} which can be used to detect errors in the data transferred by the DMA controller. If an error is detected by means of the CRC unit, the data block could be retransmitted. The DMA controller will also time-out if a transaction takes too long. If if the error rate is consistently high, fault tolerant software could be written to shut down te local processing subsystem and its functions migrated to another subsystem on the current or to another chip.
+The \textbf{DMA controller} has a CRC unit (more on this in \textbf{Section \ref{sec:crc}}) which can be used to detect errors in the data transferred by the DMA controller. If an error is detected by means of the CRC unit, the data block could be retransmitted. The DMA controller will also time-out if a transaction takes too long. If if the error rate is consistently high, fault tolerant software could be written to shut down the local processing subsystem and its functions migrated to another subsystem on the current or to another chip.
 
 The \textbf{communications controller} is able to detect the following kinds of faults:
-parity of received packet; received packet framing error; transmit buffer overrun. Since the communications controller is mission-critical to the local processing subsystem, is should be disabled and isolated and its functions migrated to another subsystem on the current on onto another chip if a failure is detected.
+parity of received packet, received packet framing error, and transmit buffer overrun. Since the communications controller is mission-critical to the local processing subsystem, it should be disabled and isolated and its functions migrated to another subsystem on the current or onto another chip if a failure is detected.
 
-\hl{The router section needs to be reorganized and put references to the backpressure and dropped packet reinjection sections}\\
-The \textbf{router} is a sophisticated piece of circuitry and is endowed with some internal fault-tolerance capacity. In particular it is possible to map out a failed multicast router entry --- useful since the multicast router dominates the silicon area of the communications router. It also has the capacity to cope with external failures. Emergency routing will attempt to bypass a faulty or blocked link. In the event of a node (or larger) failure this will not be sufficient. In order to tolerate a chip failure several expedients can be employed on a local basis:
+The \textbf{router} is a complex piece of circuitry and is endowed with some internal fault-tolerance capacity. In particular it is possible to map out a failed multicast router entry --- useful since the multicast router dominates the silicon area of the communications router. It also has the capacity to cope with external failures. Emergency routing will attempt to bypass a faulty or blocked link. In the event of a node (or larger) failure this will not be sufficient and in order to tolerate a chip failure several measures can be employed on a local basis:
 \begin{itmz}
-	\item Point-to-point packets can be routed around the obstruction;
+	\item Point-to-point packets can be routed around the obstruction,
 	\item Multicast packets with a router entry can be redirected appropriately.
 \end{itmz}
 In most cases, default multicast packets cannot sensibly be trapped by adding table entries due to their (almost) infinite variety. To allow re-routing, these packets can be dropped to the monitor processor on a link-by-link basis using the diversion register. In principle they can then be routed around the obstruction as point-to-point payloads before being resurrected at the opposite side. Should the monitor processor become overwhelmed, it is also possible to use the diversion register to eliminate these packets in the router; this prevents them blocking the router pipeline while waiting for a time-out and thus delaying viable traffic.
 
-The router is able to detect the following faults --- packet parity errors, packet time-phase errors, packet unroutable errors such as a locally-sources multicast packet which doesn't match any entry in the multicast router, wrong packet length. In the case any of the above faults are detected, a multicast router entry can be disabled. The router can also be reconfigured to get around certain faults. For example, since all multicast router entries are identical the function of any entry can be relocated to a spare entry. Also, if a router becomes full a global reallocation of resources can move functionality to a different router.
+The router is able to detect a variety of faults, namely: packet parity errors, packet time-phase errors, packet unroutable errors, and wrong packet length. In the case any of the above faults are detected, a multicast router entry can be disabled. The router can also be reconfigured to get around certain faults, e.g., since all multicast router entries are identical, the function of any entry can be relocated to a spare entry. Also, if a router becomes full, a global reallocation of resources can move functionality to a different router.
 
-\hl{Check the inter-chip Tx/Rx section}\\
-The \textbf{inter-chip transmit and receive interfaces} (See \textbf{Figure~\ref{fig:interchip_links}}) has various fault detection capabilities, namely: Monitor processors should regularly test link functionality, an input controlled by the system controller causes the interface to deadlock, and the interface can be disabled to isolate the chip-chip link. As regards reconfiguration capabilities the link interface can be reset by the system controller to attempt recovery from the fault, and the link interface can be isolated and an alternative route used.
-
-The fault inducing, detecting and resetting functions are controlled from the system controller. The interfaces are `glitch hardened' to greatly reduce the probability of a link deadlock arising as a result of a glitch on one of the inter-chip wires. Such a glitch may introduce packet errors, which will be detected and handled elsewhere, but it is very unlikely to cause deadlock. It is expected that the link reset function will not be required often.
+The \textbf{inter-chip transmit and receive interfaces} (see \textbf{Figure~\ref{fig:interchip_links}}) can be made robust to faults by having the monitor process regularly test the link functionality. If a fault is detected the link interface can be reset by the system controller to attempt recovery from the fault, and the link interface can be isolated and an alternative route used. The interfaces are `glitch hardened' to greatly reduce the probability of a link deadlock arising as a result of a glitch on one of the inter-chip wires. Such a glitch may introduce packet errors, which will be detected and handled elsewhere, but it is very unlikely to cause deadlock.
 
 The \textbf{SDRAM interface} is endowed with Delay-Locked Loop (DLL) delay lines (including a spare) which can be tested for stuck-at faults and relative timing accuracy. If a fault in the timing is detected, the SDRAM interface can be isolated and replaced by using the spare delay line.
 
-The \textbf{Ethernet MII interface} is only used in a small number of nodes, specifically one for each group of 48 chips and thus most nodes are insensitive to faults in nuts functionality as they will not attempt to use it.
+The \textbf{Ethernet MII interface} is only used in a small number of nodes, specifically one for each group of 48 chips and thus most nodes are insensitive to faults in its functionality as they will not attempt to use it.
 
-To detect faults in the \textbf{system RAM}, the monitor processor could perform a system RAM test at start-up, and also periodically during the course of the system operation. Since the system RAM does not employ any kind of parity or ECC system, it is not clear at this point to detect soft errors. If an error is detected through the start-up test, fault words could be mapped out of use. If the system RAM is deemed unusable, the only other option (short of completely disabling the entire chip) would be to use the SDRAM instead. This will probably result in compromised performance for the fascicle processors due to loss of SDRAM bandwidth.
+To detect faults in the \textbf{system RAM}, the monitor processor could perform a system RAM test at start-up, and also periodically during the course of the system operation. Since the system RAM does not employ any kind of parity or ECC system, it is not clear how soft errors can be detected. If an error is detected during the start-up test, faulty words could be mapped out of use. If the system RAM is deemed unusable, the only other option (short of completely disabling the entire chip) would be to use the SDRAM instead. This will probably result in compromised performance for the fascicle processors due to loss of SDRAM bandwidth.
 
-A fault in the \textbf{boot ROM} can be easily detected during start-up if the boot ROM fails the boot process. One can easily switch the boot ROM out of the boot area rendering it harmless. When the boor ROM is switched out of the boot area the system RAM is switched in the boot area and a neighbour chip can initialise the system RAM with the boot code and retry initialisation.
+A fault in the \textbf{boot ROM} can be easily detected during start-up if the boot ROM fails the boot process. One can easily switch the boot ROM out of the boot area rendering it harmless. When the boot ROM is switched out of the boot area the system RAM is switched in the boot area and a neighbouring chip can initialise the system RAM with the boot code and retry initialisation.
 
 \clearpage
 \section{Network congestion}
 \label{sec:congestion}
 
-\subsection{Backpressure}
-Backpressure visualisation. \textbf{Figure~\ref{fig:backpressure}} generated by 'Network Tester' \citep[see][]{heathcote2015networktester}.
-\begin{figure}[htbp]
-	\centering
-	\includegraphics[width=0.5\linewidth]{images/backpressure2.pdf}
-	\caption{Backpressure}	
-	\label{fig:backpressure}
-\end{figure}
-
 \subsection{Dumped-packet reinsertion}
-\begin{figure}[b]
-	\centering
-	\includegraphics[width=0.35\linewidth]{images/system_architecture.pdf}
-	\caption{SpiNNaker inter-links.}
-	\label{fig:interchip_links}	
-\end{figure}
 
 \verb|dumpBounce.c|:  packet re-injection software that runs on a separate core.
  
@@ -336,6 +316,13 @@ packets.
 \item Determining the effectiveness of place and route algorithms by finding `hot-spots' in the network.
 \item Characterising the behaviour of the network in the presence of locally and globally synchronised bursting traffic.
 \end{itemize}
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=0.4\linewidth]{images/system_architecture.pdf}
+	\caption{SpiNNaker inter-links.}
+	\label{fig:interchip_links}	
+\end{figure}
 
 \begin{figure}
 	\begin{subfigure}[htbp]{.5\linewidth}
@@ -353,12 +340,35 @@ packets.
 	\caption{Network congestion with respect to network load.}
 \end{figure}
 
+%\begin{figure}
+%	\centering
+%	\includegraphics[width=0.6\linewidth]{images/bursting.pdf}
+%	\caption{Bursting}
+%	\label{fig:bursting}
+%\end{figure}
+%%\caption{Network congestion with respect to network load.}
+%
+%\begin{figure}
+%	\centering
+%	\includegraphics[width=0.6\linewidth]{images/bursting_connaware2.pdf}
+%	\caption{Bursting Connection-aware}	
+%	\label{fig:bursting_aware}
+%\end{figure}
+%%\caption{Network congestion with respect to network load.}
+
+\begin{enumerate}
+\item Backpressure (see \textbf{Figure~\ref{fig:backpressure}}) during the first bit (blue 0--0.4) resulting in a lower number of packets sent
+\item Important line is green (true measure of whether packets are being dropped or not)
+\item Number of packets sent is constant for every point (=32) along the x-axis. Network duty=0.1 means that all the packets are sent in 0.1*1ms, i.e. in a very short period of time, i.e. high network load. Network duty=1 means that the whole 1 ms is used to transmit all of the 32 packets.
+\item Dropped packets (solid red) are dropped but reinjected so not really dumped vs the dashed red line where packets are dropped and dumped.
+\item Packets sent is the same in every point calculated, only the level of bursting is changed.
+\item Same colour curves share the same axis scale.
+\item (a) uses simulated annealing ("smarter"), (b) dumb placement as that used in PACMAN
+\end{enumerate}
 
 Clearly with packet reinjection, nearly all packets which are actually sent arrive at their destination, without reinjection, things aren't so great.
 
 Fun things to try: Uncomment lines 23--24 and the random network will get placed by what PACMAN calls ``connectivity-aware placement,'' rather than simulated annealing (the default). Interestingly, on my system this results in reinjection no-longer helping and the whole thing being even worse under bursty packets.
-
-Add the line \verb|e.burst_phase = None| somewhere before \verb|e.run()| is called and the packet generators will still generate bursts but they'll be at random phases to each other (i.e., not bursting all at the same time). This normally eliminates packet dropping for all but the most extreme burstiness.
 
 \begin{figure}[htbp]
 	\centering
@@ -366,6 +376,18 @@ Add the line \verb|e.burst_phase = None| somewhere before \verb|e.run()| is call
 	\caption{Network congestion in a bursty (random) situation.}	
 	\label{fig:bursting_random}
 \end{figure}
+
+\clearpage
+\subsection{Backpressure}
+Backpressure visualisation. \textbf{Figure~\ref{fig:backpressure}} generated by 'Network Tester' \citep[see][]{heathcote2015networktester}.
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=0.5\linewidth]{images/backpressure2.pdf}
+	\caption{Backpressure.}	
+	\label{fig:backpressure}
+\end{figure}
+
+Add the line \verb|e.burst_phase = None| somewhere before \verb|e.run()| is called and the packet generators will still generate bursts but they'll be at random phases to each other (i.e., not bursting all at the same time). This normally eliminates packet dropping for all but the most extreme burstiness.
 
 \clearpage
 \section{Process migration}
